--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     </div>
                                     <div class="col-md-2 col-sm-12 col-xs-12">
                                         <ul class="list-group horizontal category_list_hero">
-                                            <li class="list-group-item pull-right"><a href=""><i class="fas fa-utensils"></i>Advanced search</a></li>
+                                            <li class="list-group-item pull-right"><a href=""><i class="fas fa-cog"></i>Advanced search</a></li>
                                         </ul>
                                     </div>
                                 </div>
