--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,10 @@
                         </div>
                         <div class="row social_icons">
                             <div class="col-md-12 col-sm-12">
-                                <a href="/phone.html"><img src="images/Social%20media%20icon.png" /></a>
+                                <a href="https://www.twitter.com"><img src="images/twitter.png" /></a>
+                                <a href="https://plus.google.com"><img src="images/google_plus.png" /></a>
+                                <a href="https://www.facebook.com"><img src="images/facebook.png" /></a>
+                                <a href="https://www.youtube.com"><img src="images/youtube.png" /></a>
                             </div>
                         </div>
                     </div>
