--- a/about_card.html
+++ b/about_card.html
@@ -85,13 +85,107 @@
             </div>
         </header>
 
-        <!--  -->
-        <section class="about_the_card no_padding">
+        <section class="menu_other_pages arima">
+            <div class="container">
+                <div class="row">
+                    <!-- search section comes here -->
+                    <div class="search-sec">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+                                    <div class="row">
+                                        <div class="form-section">
+                                            <form action="#" method="post" class="form-inline">
+                                                <!--<div class="col-lg-12">-->
+                                                <!--<div class="row">-->
+                                                <!-- <ul class="list-group horizontal main_search">-->
+                                                <div class="col-md-5 col-sm-12 col-xs-12">
+                                                    <div class="form-group looking">
+                                                        <label for="search">I'm looking for</label>
+                                                        <input type="text" class="form-control no-border" id="search" placeholder="Restaurants . . . ">
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-5 col-sm-12 col-xs-12">
+                                                    <div class="form-group where_in">
+                                                        <label for="search">Show me where in</label>
+                                                        <div class="input-group">
+                                                            <input type="text" class="form-control no-border" id="city" placeholder="T.Nagar, Chennai">
+                                                            <!-- <span class="input-group-addon"><a href=""><i class="fas fa-map-marker-alt"></i></a></span> -->
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-2 col-sm-6 col-xs-6">
+                                                    <div class="form-group sub_but">
+                                                        <button type="submit" class="btn">Find me shop</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About the card -->
+        <section class="about_the_card no-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12 no-padding">
                         <div class="about_the_card_img">
-                           <h1 class="header_center">ABOUT THE CARD</h1>
+                            <img src="images/About%20us.jpg" class="img-responsive" />
+                            <h1 class="header_center">ABOUT THE CARD</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- About the card -->
+        <section class="about_card_text">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12 no-padding">
+                        <div class="about_the_card_wrapper">
+                            <p class="about_card_head">
+                                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
+                            </p>
+                            <p class="about_card_description">
+                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+                            </p>
+                             <p class="about_card_description">
+                                Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <!-- Product count -->
+        <section class="product_count">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12 no-padding">
+                        <div class="product_count_wrapper">
+                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
+                                <img src="images/Products.jpg" class="img-responsive" />
+                                <h4>60 Million+</h4>
+                                <p>Products</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
+                                <img src="images/Seller.jpg" class="img-responsive" />
+                                <h4>3000+</h4>
+                                <p>Sellers</p>
+                            </div>
+                            <div class="col-md-4 col-sm-4 col-xs-12 product_wrapper">
+                                <img src="images/cities.jpg" class="img-responsive" />
+                                <h4>220</h4>
+                                <p>Cities</p>
+                            </div>
                         </div>
                     </div>
                 </div>
