product page added

--- a/about_card.html
+++ b/about_card.html
@@ -49,14 +49,14 @@
                             <nav class="navbar navbar-default">
                                 <div class="container-fluid">
                                     <div class="navbar-header"> 
-                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">	
+                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" >	
                                             <span class="sr-only">Toggle navigation</span>	
                                             <span class="icon-bar"></span>					
                                             <span class="icon-bar"></span>						
                                             <span class="icon-bar"></span>						
                                         </button> 
                                     </div>
-                                    <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                                    <div id="navbar" class="navbar-collapse collapse" style="height: 1px;">
                                         <ul class="nav navbar-nav">
                                             <li class="active"><a href="index.html">Products & shops</a></li>
                                             <li><a href="aboutsudc.html">About SUDC card</a></li>
@@ -85,7 +85,7 @@
             </div>
         </header>
 
-        <section class="menu_other_pages arima">
+        <section class="menu_other_pages">
             <div class="container">
                 <div class="row">
                     <!-- search section comes here -->
@@ -110,7 +110,7 @@
                                                         <label for="search">Show me where in</label>
                                                         <div class="input-group">
                                                             <input type="text" class="form-control no-border" id="city" placeholder="T.Nagar, Chennai">
-                                                            <!-- <span class="input-group-addon"><a href=""><i class="fas fa-map-marker-alt"></i></a></span> -->
+                                                            <span class="input-group-addon"><a href=""><i class="fas fa-map-marker-alt"></i></a></span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -129,6 +129,26 @@
                 </div>
             </div>
         </section>
+
+        <!-- Sub mennu section-->
+        <section class="submenu">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
+
+                        <ul class="nav nav-tabs">
+                            <li role="presentation" class="active"><a href="about_card.html">About the card</a></li>
+                            <li role="presentation"><a href="howitworks.html">How it works?</a></li>
+                            <li role="presentation"><a href="membership.html">Membership</a></li>
+                            <li role="presentation"><a href="customerbenfits.html">Customer Benifits</a></li>
+                            <li role="presentation"><a href="tstimonial.html">Customer testimonial</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+            </div>  
+        </section>
+
 
         <!-- About the card -->
         <section class="about_the_card no-padding">
@@ -156,7 +176,7 @@
                             <p class="about_card_description">
                                 Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
                             </p>
-                             <p class="about_card_description">
+                            <p class="about_card_description">
                                 Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
                             </p>
                         </div>
@@ -164,7 +184,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- Product count -->
         <section class="product_count">
             <div class="container">
@@ -186,6 +206,117 @@
                                 <h4>220</h4>
                                 <p>Cities</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Directors -->
+        <section class="directors">
+            <div class="container">
+                <div class="row">
+                    <div id="directorCarousal" class="carousel slide" data-ride="carousel" data-interval="0"> 
+                        <!-- Wrapper for carousel items -->
+                        <div class="carousel-inner">
+                            <div class="item carousel-item active">
+                                <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/Trendy-1.jpg" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <div class="block">
+                                                <span>4.3<i class="fa fa-star checked"></i></span>
+                                            </div>
+                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
+                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <div class="block">
+                                                <span>4.3<i class="fa fa-star checked"></i></span>
+                                            </div>
+                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
+
+                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6 col-xs-12  hidden-sm hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/Trendy-3.jpg" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <div class="block">
+                                                <span>4.3<i class="fa fa-star checked"></i></span>
+                                            </div>
+                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
+
+                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-sm hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/Trendy-4.jpg" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <div class="block">
+                                                <span>4.3<i class="fa fa-star checked"></i></span>
+                                            </div>
+                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
+
+                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- Carousel controls -->
+                            <a class="carousel-control left carousel-control-prev" href="#myCarousel2" data-slide="prev">
+                                <i class="far fa-chevron-circle-left"></i>
+                            </a>
+                            <a class="carousel-control right carousel-control-next" href="#myCarousel2" data-slide="next">
+                                <i class="far fa-chevron-circle-right"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
