--- a/about_card.html
+++ b/about_card.html
@@ -87,6 +87,7 @@
 
         <section class="menu_other_pages">
             <div class="container">
+
                 <div class="row">
                     <!-- search section comes here -->
                     <div class="search-sec">
@@ -215,6 +216,9 @@
         <!-- Directors -->
         <section class="directors">
             <div class="container">
+
+                <h2 class="text-center">BOARD OF DIRECTOR</h2>
+
                 <div class="row">
                     <div id="directorCarousal" class="carousel slide" data-ride="carousel" data-interval="0"> 
                         <!-- Wrapper for carousel items -->
@@ -226,18 +230,15 @@
                                             <figure>		
                                                 <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                     <div class="grid-img">
-                                                        <img src="images/Trendy-1.jpg" class="img-responsive" alt="">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
                                                     </div>		
                                                 </a>		
                                             </figure>	
                                         </div>
 
                                         <div class="description">
-                                            <div class="block">
-                                                <span>4.3<i class="fa fa-star checked"></i></span>
-                                            </div>
-                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                            <h3>Dr Raja mohan Ram</h3>
+                                            <p>Director</p>
                                         </div>
                                     </div>
                                 </div>
@@ -248,19 +249,15 @@
                                             <figure>		
                                                 <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                     <div class="grid-img">
-                                                        <img src="images/Trendy-2.jpg" class="img-responsive" alt="">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
                                                     </div>		
                                                 </a>		
                                             </figure>	
                                         </div>
 
                                         <div class="description">
-                                            <div class="block">
-                                                <span>4.3<i class="fa fa-star checked"></i></span>
-                                            </div>
-                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-
-                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                            <h3>Dr Raja mohan Ram</h3>
+                                            <p>Director</p>
                                         </div>
                                     </div>
                                 </div>
@@ -270,19 +267,15 @@
                                             <figure>		
                                                 <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                     <div class="grid-img">
-                                                        <img src="images/Trendy-3.jpg" class="img-responsive" alt="">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
                                                     </div>		
                                                 </a>		
                                             </figure>	
                                         </div>
 
                                         <div class="description">
-                                            <div class="block">
-                                                <span>4.3<i class="fa fa-star checked"></i></span>
-                                            </div>
-                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-
-                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                            <h3>Dr Raja mohan Ram</h3>
+                                            <p>Director</p>
                                         </div>
                                     </div>
                                 </div>
@@ -292,24 +285,20 @@
                                             <figure>		
                                                 <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                                     <div class="grid-img">
-                                                        <img src="images/Trendy-4.jpg" class="img-responsive" alt="">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
                                                     </div>		
                                                 </a>		
                                             </figure>	
                                         </div>
 
-                                        <div class="description">
-                                            <div class="block">
-                                                <span>4.3<i class="fa fa-star checked"></i></span>
-                                            </div>
-                                            <h6><a href="#">Samsung 2.0 gaming console i7,8GB</a></h6>
-
-                                            <p><del>$100.00</del><span class="item_price">$70.00</span></p>
+                                        <div class="description text-center">
+                                            <h3>Dr Raja mohan Ram</h3>
+                                            <p>Director</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <!-- Carousel controls -->
                             <a class="carousel-control left carousel-control-prev" href="#myCarousel2" data-slide="prev">
                                 <i class="far fa-chevron-circle-left"></i>
