about_card_complete

--- a/about_card.html
+++ b/about_card.html
@@ -115,7 +115,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-2 col-sm-6 col-xs-6">
+                                                <div class="col-md-2 col-sm-12 col-xs-6">
                                                     <div class="form-group sub_but">
                                                         <button type="submit" class="btn">Find me shop</button>
                                                     </div>
@@ -256,12 +256,51 @@
                                         </div>
 
                                         <div class="description">
-                                            <h3>Dr Raja mohan Ram</h3>
-                                            <p>Director</p>
+                                            <h3>Dr Rajesh kanna</h3>
+                                            <p>Chief Executive officer</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12  hidden-sm hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <h3>Dinesh kumar</h3>
+                                            <p>Managing director</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-sm hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description text-center">
+                                            <h3>Kumar subramanimiam</h3>
+                                            <p>Chief Operative Officer</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="item carousel-item">
+                                <div class="col-md-3 col-sm-6 col-xs-12 arrival-grid">
                                     <div class="grid-arr">
                                         <div class="grid-arrival">
                                             <figure>		
@@ -279,6 +318,43 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col-md-3 col-sm-6 col-xs-12 hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <h3>Dr Rajesh kanna</h3>
+                                            <p>Chief Executive officer</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 col-sm-6 col-xs-12  hidden-sm hidden-xs arrival-grid">
+                                    <div class="grid-arr">
+                                        <div class="grid-arrival">
+                                            <figure>		
+                                                <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                                    <div class="grid-img">
+                                                        <img src="images/director.png" class="img-responsive" alt="">
+                                                    </div>		
+                                                </a>		
+                                            </figure>	
+                                        </div>
+
+                                        <div class="description">
+                                            <h3>Dinesh kumar</h3>
+                                            <p>Managing director</p>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12 hidden-sm hidden-xs arrival-grid">
                                     <div class="grid-arr">
                                         <div class="grid-arrival">
@@ -292,18 +368,18 @@
                                         </div>
 
                                         <div class="description text-center">
-                                            <h3>Dr Raja mohan Ram</h3>
-                                            <p>Director</p>
+                                            <h3>Kumar subramanimiam</h3>
+                                            <p>Chief Operative Officer</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
                             <!-- Carousel controls -->
-                            <a class="carousel-control left carousel-control-prev" href="#myCarousel2" data-slide="prev">
+                            <a class="carousel-control left carousel-control-prev" href="#directorCarousal" data-slide="prev">
                                 <i class="far fa-chevron-circle-left"></i>
                             </a>
-                            <a class="carousel-control right carousel-control-next" href="#myCarousel2" data-slide="next">
+                            <a class="carousel-control right carousel-control-next" href="#directorCarousal" data-slide="next">
                                 <i class="far fa-chevron-circle-right"></i>
                             </a>
                         </div>
