--- a/product_1.html
+++ b/product_1.html
@@ -145,14 +145,14 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="brd_crmb">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                                <li class="breadcrumb-item"><a href="#">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Product & Shops</li>
                             </ol>
                         </nav>
@@ -179,12 +179,12 @@
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                         Near By Location
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                            <div id="collapseOne" class="collapse in" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
                                         <li> <input type="checkbox" id="fruit1" name="fruit-1" value="Apple"><label for="fruit1">Westmambalam</label></li>
@@ -199,12 +199,12 @@
                         <div class="card">
                             <div class="card-header" id="headingTwo">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                         Distance
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                            <div id="collapseTwo" class="collapse in" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
                                         <li> <input type="checkbox" id="fruit6" name="fruit-1" value="Apple"><label for="fruit6">Bird's-eye View</label></li>
@@ -219,12 +219,12 @@
                         <div class="card">
                             <div class="card-header" id="headingThree">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                         Discount offer
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div id="collapseThree" class="collapse in" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
                                         <li> <input type="checkbox" id="fruit11" name="fruit-1" value="Apple"><label for="fruit11">0 - 10 <span class="pull-right">(10)</span></label></li>
@@ -239,12 +239,12 @@
                         <div class="card">
                             <div class="card-header" id="headingFour">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
                                         Category
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapsefour" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div id="collapsefour" class="collapse in" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <ul>
                                         <li> <input type="checkbox" id="fruit16" name="fruit-1" value="Apple"><label for="fruit16">Mobile Phones</label></li>
@@ -259,12 +259,12 @@
                         <div class="card">
                             <div class="card-header" id="headingFive">
                                 <h2 class="mb-0">
-                                    <button class="btn btn-link fw text-left border-bottom collapsed" type="button" data-toggle="collapse" data-target="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
+                                    <button class="btn btn-link fw text-left border-bottom" type="button" data-toggle="collapse" data-target="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
                                         Price offer
                                     </button>
                                 </h2>
                             </div>
-                            <div id="collapsefive" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div id="collapsefive" class="collapse in" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
                                     <div id="slider-range"></div>
                                     <p class="mt20">   <input type="text" id="amount" class="prc_rte" readonly=""></p>
